# internal/http/router.go
@@ -5,14 +5,21 @@ import (
 	nethttp "net/http"
 
 	"task-tracker/internal/auth"
+	"task-tracker/internal/authz"
 	"task-tracker/internal/http/handler"
 	"task-tracker/internal/http/middleware"
+	"task-tracker/internal/repository"
 
 	"github.com/go-chi/chi/v5"
 	chimiddleware "github.com/go-chi/chi/v5/middleware"
 )
 
-func NewRouter(authHandler *handler.AuthHandler, workspaceHandler *handler.WorkspaceHandler, jwtService *auth.JWTService) nethttp.Handler {
+func NewRouter(authHandler *handler.AuthHandler,
+	workspaceHandler *handler.WorkspaceHandler,
+	jwtService *auth.JWTService,
+	workspaceMemberHandler *handler.WorkspaceMemberHandler,
+	projectHandler *handler.ProjectHandler,
+	workspaceMemberRepo repository.WorkspaceMemberRepository) nethttp.Handler {
 	r := chi.NewRouter()
 
 	r.Use(chimiddleware.RequestID)
@@ -39,6 +46,20 @@ func NewRouter(authHandler *handler.AuthHandler, workspaceHandler *handler.Works
 			r.Use(middleware.RequireAuth(jwtService))
 			r.Post("/", workspaceHandler.Create)
 			r.Get("/", workspaceHandler.List)
+
+			r.Route("/{workspaceSlug}", func(r chi.Router) {
+				r.Route("/projects", func(r chi.Router) {
+					r.With(middleware.RequireRole(workspaceMemberRepo, authz.RoleMember)).Post("/", projectHandler.Create)
+					r.Get("/", projectHandler.List)
+				})
+			})
+		})
+		r.Route("/workspace-members", func(r chi.Router) {
+			r.Use(middleware.RequireAuth(jwtService))
+			r.Post("/", workspaceMemberHandler.AddMember)
+			r.Get("/", workspaceMemberHandler.ListMembers)
+			r.Delete("/", workspaceMemberHandler.DeleteMember)
+			r.Patch("/", workspaceMemberHandler.UpdateMemberRole)
 		})
 	})
 
